# cryptopunks

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  Dockerfile.bot  Dockerfile.docs  Dockerfile.indexer  Dockerfile.predictor  Dockerfile.punks.auction  Dockerfile.punksmarket.app  Dockerfile.v1-app  Dockerfile.v1-punks-indexer  LICENSE  README.md  foundry.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: address-labels.md  collection-source-template.md  collection-standard-scope.md  config.json  contract-write-plan-kind.md  cryptopunks-market-bids.md  curated-collections-burned.md  curated-collections-museum.md  curated-collections-perfect-priceless.md  punk-similarity-index.md  punks-auction-client.md  punks-vault-client.md  search-exact-trait-match.md  search-number-words.md  search-synonyms.md  search-trait-or-criteria.md
bot/: .env.example  .env.production.example  .gitignore  README.md  package.json  tsconfig.json
contracts/: .gitignore  CryptoPunksAuctions.sol  PunksAuction.sol  PunksData.sol  PunksDataLoader.sol  PunksRenderer.sol  README.md  hardhat.config.ts  package.json  remappings.txt
docs/: .env.production.example  .gitignore  index.md  indexer.md  nginx.conf  package.json  sdk.md
images/: README.md  package.json
indexer/: .env.local.example  (+9 more)
predictor/: .env.example  .env.production.example  .gitignore  README.md  pyproject.toml
predictor/.kamal/: secrets
predictor/config/: deploy.yml
predictor/src/punks_predictor/: cli.py  db.py  features.py  pipeline.py  trait_names.py
predictor/tests/: test_pipeline.py
(+1042 files in other folders)
