[project]
name = "networked-punks-predictor"
version = "0.1.0"
description = "Nightly CryptoPunks 24h sale prediction worker"
requires-python = ">=3.12,<3.13"
dependencies = [
  "joblib>=1.4.2",
  "numpy>=2.2.0",
  "pandas>=2.2.3",
  "psycopg[binary]>=3.2.3",
  "scikit-learn>=1.6.0",
  "sqlalchemy>=2.0.36",
]

[project.scripts]
punk-predictor = "punks_predictor.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/punks_predictor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
